--- a/loos.dox
+++ b/loos.dox
@@ -681,10 +681,20 @@ periodicity (eg rdf).  We have no immediate plans to generalize the code to hand
       effsize.pl)
 
       <DT> <B> avgconv </B>
-      <DD>
+      <DD> Computes the RMSD between the average structure for time i
+      and i+1 for a trajectory.  The "locally optimal" flag determines
+      whether the trajectory is globally aligned first or whether each
+      block of frames used in the average is aligned prior to averaging.
 
       <DT> <B> bcom </B>
-      <DD>
+      <DD> Implements the block covariance overlap method.  Briefly,
+      think of block-averaging where the trajectory is broken up into
+      blocks of a given size, the PCA computed for the block, and then
+      the covariance overlap is calculated between the block's PCA and
+      the PCA for the entire trajectory.  Then this is repeated for
+      increasing block sizes.  A Z-score for the bcom result can also
+      be calculated (using the --zscore=1 flag and optionally setting
+      the number of "tries" to use).
 
       <DT> <B>block_average</B>
       <DD> Reads a simple columnated text file, and computes the block-averaged
@@ -694,17 +704,31 @@ periodicity (eg rdf).  We have no immediate plans to generalize the code to hand
            J. Chem. Phys., 1989, 91, 461-466
 
       <DT> <B> block_avgconv </B>
-      <DD>
+      <DD> Block-averaging of RMSD between average structures for a
+      trajectory.  "Range" in this case is the range of block sizes
+      and not stricly which frames of the trajectory to use.
 
       <DT> <B> bootstrap_overlap.pl </B>
-      <DD>
+      <DD> PERL program to compute the bcom and bootstrapped bcom for
+      a trajectory, generating a plot of their ratio and an
+      exponential fit.  Requires gnuplot.  Use the "--help" option for
+      more details.
 
       <DT> <B> boot_bcom </B>
-      <DD>
+      <DD> Bootstrapped bcom is similar to bcom above, but rather than
+      using contiguous blocks, it uses a bootstrap procedure by
+      randomly selecting frames from the trajectory to build
+      decorrelated blocks.  If no seed for the random number generator
+      is given, LOOS will pick a default (based on the current system
+      clock).  The --replicates option determines how many blocks are
+      generated for a given size.
 
       <DT> <B> decorr_time </B>
       <DD> Decorrelaton time as computed by structural histogram
-      analysis.
+      analysis.  The default values for the range of N-values,
+      repetitions, and bin fraction are taken from the paper below and
+      may need to be changed, particularly if you are using a
+      trajectory you suspect is undersampled.
       Reference: Lyman & Zuckerman, J Phys Chem B (2007) 111:1287-82
 
       <DT> <B> effsize.pl </B>
@@ -742,7 +766,8 @@ periodicity (eg rdf).  We have no immediate plans to generalize the code to hand
 
 
       <DT> <B> sortfids </B>
-      <DD>
+      <DD>Sorts fiducials (from fidpick) based on a decreasing bin
+      population.
 
       <DT> <B> ufidpick </B>
       <DD> Picks a set of fiducial structures from a trajectory using
