--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-04-18    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in GRO file handling where the periodic box was
+	not converted into Angstroms
+
 2011-03-21    <tromo@spade.biophysics.rochester.edu>
 
 	* Changed library search order to fix a problem that cropped up on
