--- a/loos.dox
+++ b/loos.dox
@@ -1219,9 +1219,10 @@ periodicity (eg rdf).  We have no immediate plans to generalize the code to hand
 
 
 /*! \page Changes Change Log
-\section release161 Version 1.6.0 5-16-2011)
+\section release161 Version 1.6.0 5-18-2011)
 \subsection f161_bugs Bug Fixes
 <UL>
+  <LI> Fixed bug where charmm.hpp was not copied as part of an install
   <LI> Fixed bug in GRO files where the periodic box was not converted into Angstroms.
   <LI> Fixed bug in eigenflucc that included the rotation/translation
   modes when computing B-factors.
