--- a/Examples/README
+++ b/Examples/README
@@ -2,7 +2,14 @@
 
 This directory is intended to be a template for getting you started
 with using LOOS with either SCons or Make.  The bundled program,
-'center-pdb' is the LOOS way of saying "hello world!"  
+'center-pdb' is the LOOS way of saying "hello world!"  Simply copy
+this directory and start adding your own code, building it with either
+SCons (recommended) or make.  Note that the sample SCons and make
+files assume that LOOS is already installed somewhere.
+
+Alternatively, see the new "Packages/User" directory for tool
+templates that reside within the LOOS directory and can be build
+alongside LOOS.
 
 * Using SCons
 
